# wasm-model-synthesis-merrell42

./: .gitignore  CMakeLists.txt  License-Merrel42ModelSynth.txt  License.txt  Merrel42ModelSynth-minimal.idl  Merrel42ModelSynth.h  Merrel42ModelSynth.idl  ReadMe.md  asconfig.json  build.sh  package-lock.json  package.json  timings.md  tsconfig.json
Examples/: index-cpp.html  index-js.html  index.html  package-lock.json  package.json  sample-hashes.json  samples.xml  style.css  vite.config.ts
Examples/data/: samples.xml
Examples/js/: example.js  example.ts  main-cpp.ts  main-js.ts  main.ts  render.ts  setup.ts  synthesizer.worker.ts  types.d.ts
Examples/js/lib/: debug-propagator.ts  native-input.ts  parse-input.ts  parse-overlapping.ts  parse-simpletiled.ts  parse-tiled-model.ts  propagator-asm.ts  propagator-cpp.ts  propagator.ts  synthesizer.ts  xml-util.ts
assembly/: index.ts  propagator-ac3-i.ts  propagator-ac3.ts  propagator-ac4-i.ts  propagator-ac4.ts  propagator-config.ts  propagator.ts  rand.ts
assembly/types/: arr-arr-u16.ts  arr-boolean.ts  arr-f32.ts  arr-u16.ts  deque.ts  index.ts  size-6d.ts  size.ts
em-thirdparty-header/: ifstream_.cpp  ifstream_.h  ifstream_patch.patch  lodepng.cpp  lodepng.h  xmlParser.h
emscripten/: Merrel42ModelSynth.idl  build.sh  glue-extra.js
emscripten/Examples/: index.html  package-lock.json  package.json  sample-hashes.json  style.css  tsconfig.json  vite.config.ts
emscripten/Examples/js/: main-cpp.ts  main.ts  render.ts  setup.ts
emscripten/Examples/js/lib/: debug-propagator.ts  input-settings-cpp.ts  propagator-cpp.ts  synthesizer.worker.ts
emscripten/em-thirdparty-header/: License-Merrel42ModelSynth.txt  ifstream_.cpp  ifstream_.h  ifstream_patch.patch  lodepng.cpp  xmlParser.cpp
src/: index.ts  input-settings.ts  native-input.ts  parse-input.ts  parse-overlapping.ts  parse-simpletiled.ts  parse-tiled-model.ts  propagator-asm.ts  propagator.ts  synthesizer.ts  synthesizer.worker.ts  xml-util.ts
